# AD_LongitudinalDataGenerator

./: .gitignore  AD detection experiment.ipynb  AD detection.ipynb  README.md  README_pitt_analysis.md  keyNotes_Paper.docx  multi_file_analysis.ipynb  multi_file_analysis_healthy.ipynb  paper_presentation.pptx  pitt_data_group_6 - full_data.csv  pitt_linguistic_analysis_notebook.ipynb  pyproject.toml  scripts.ipynb
.github/chatmodes/: Dementia deteration v2.chatmode.md  Dementia deteration.chatmode.md  Healthy aging.chatmode.md  Healthy-aging.chatmode.md
data/: Alison Marjorie Bennett.json  Eva Sanderson.json  Jacob Stein.json  Thomas Delgado.json
data_06_07/: EVA.json  thomas.json
data_31_07/dementia/: Anthony Samuel Reyes.json  Anthony.json  Becky.json  George.json  (+14 more)
healthy_data/: Alison healthy.json
knowledgeBase/: facts1.md  facts2.md  facts3.md
paper/: paper_presentation.pptx
personas/: Anthony.json  George.json  Jacob.json  James.json  Jessica.json  Keren.json  Lisa.json  Mark.json  Olivia.json  Robert.json
pitt vs story comprasions/: advanced_statistical_comparison_disease_groups.csv  datasets_overview_comparison.csv  discriminant_analysis_coefficients.csv  group_comparison_summary.csv  pitt_linguistic_features_complete.csv  pitt_vs_story_disease_groups_statistical_comparison.csv  pitt_vs_story_effect_comparison.csv  pitt_vs_story_mean_comparison.csv  statistical_analysis_results.csv  story_group_comparison_summary.csv  story_linguistic_features_complete.csv  story_statistical_analysis_results.csv
utils/: extract_nlp_features.py  format_data.py
(+88 files in other folders)
